# ros2

./: .gitattributes  .gitignore  .gitmodules  .gn  BUILD.gn  BUILD_FULL.gn  BUILD_STANDALONE.gn  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Earthfile  LICENSE  Makefile  README.md  build.sh  colcon_defaults.yaml  create_jenkins_job.py  cyclonedds.repos  excluded-deps.txt  excluded-pkgs.txt  ikos.repos  jenkins_amdahl.rb  pixi.toml  pixi_linux.toml  requirements.txt  ros2.repos  ros2_arm.xml  ros2_ex.repos  ros_entrypoint.sh  run.sh  run_ros2_batch.py  run_ros2_packaging.py  set_bot_admin_privs.py  spaceros-pkgs.txt  spaceros.repos  toolchainfile.cmake  update_labels_github.py
build_config/: BUILD.gn  BUILDCONFIG.gn  ohos.gni
build_config/scripts/: generate_config.py  generate_cyclone_config.py  generate_fastdds_config.py  generate_foonathan_config.py  generate_logging_macros.py  generate_node_sizes.py
build_config/toolchain/: BUILD.gn
coverage/: README.md  (+4 more)
demo_cpp/: BUILD.gn  CMakeLists.txt
demo_cpp/src/: listener.cpp  listener.cpp.orig  talker.cpp  talker.cpp.orig
foundation/rclcpp/: BUILD.gn
foundation/rcpputils/: BUILD.gn
foundation/rcutils/: BUILD.gn
foundation/rmw/: BUILD.gn
foundation/rmw_implementation/: BUILD.gn
foundation/tracing/: BUILD.gn
gn_templates/: ros2_config.gni  ros2_executable.gni  ros2_library.gni  rosidl_generator.gni
interfaces/action_msgs/: BUILD.gn
interfaces/action_msgs/src/msg/: goal_info__functions.c  goal_info__type_support.c  goal_status__functions.c  goal_status__type_support.c  goal_status_array__functions.c  goal_status_array__type_support.c
interfaces/action_msgs/src/srv/: cancel_goal__request__functions.c  cancel_goal__request__type_support.c  cancel_goal__response__functions.c  cancel_goal__response__type_support.c
interfaces/composition_interfaces/: BUILD.gn
interfaces/composition_interfaces/src/srv/: list_nodes__functions.c  list_nodes__rosidl_typesupport_fastrtps_c.cpp  list_nodes__type_support.c  list_nodes__type_support.cpp  load_node__functions.c  load_node__rosidl_typesupport_fastrtps_c.cpp  load_node__type_support.c  load_node__type_support.cpp  unload_node__functions.c  unload_node__rosidl_typesupport_fastrtps_c.cpp  unload_node__type_support.c  unload_node__type_support.cpp
interfaces/diagnostic_msgs/: BUILD.gn
interfaces/diagnostic_msgs/src/msg/: diagnostic_array__functions.c  diagnostic_array__type_support.c  diagnostic_status__functions.c  diagnostic_status__type_support.c  key_value__functions.c  key_value__type_support.c
interfaces/diagnostic_msgs/src/srv/: add_diagnostics__request__functions.c  add_diagnostics__request__type_support.c  add_diagnostics__response__functions.c  add_diagnostics__response__type_support.c  self_test__request__functions.c  self_test__request__type_support.c  self_test__response__functions.c  self_test__response__type_support.c
interfaces/geometry_msgs/: BUILD.gn
interfaces/geometry_msgs/src/msg/: accel__functions.c  accel__type_support.c  accel_stamped__functions.c  accel_stamped__type_support.c  accel_with_covariance__functions.c  accel_with_covariance__type_support.c  accel_with_covariance_stamped__functions.c  accel_with_covariance_stamped__type_support.c  inertia__functions.c  inertia__type_support.c  inertia_stamped__functions.c  inertia_stamped__type_support.c  point32__functions.c  point32__type_support.c  point__functions.c  point__type_support.c  point_stamped__functions.c  point_stamped__type_support.c  polygon__functions.c  polygon__type_support.c  polygon_stamped__functions.c  polygon_stamped__type_support.c  pose2d__functions.c  pose2d__type_support.c  pose__functions.c  pose__type_support.c  pose_array__functions.c  pose_array__type_support.c  pose_stamped__functions.c  pose_stamped__type_support.c  pose_with_covariance__functions.c  pose_with_covariance__type_support.c  pose_with_covariance_stamped__functions.c  pose_with_covariance_stamped__type_support.c  quaternion__functions.c  quaternion__type_support.c  quaternion_stamped__functions.c  quaternion_stamped__type_support.c  transform__functions.c  transform__type_support.c  (+20 more)
interfaces/lifecycle_msgs/: BUILD.gn
interfaces/lifecycle_msgs/src/msg/: state__functions.c  state__rosidl_typesupport_fastrtps_c.cpp  state__type_support.c  state__type_support.cpp  transition__functions.c  transition__rosidl_typesupport_fastrtps_c.cpp  transition__type_support.c  transition__type_support.cpp  transition_description__functions.c  transition_description__rosidl_typesupport_fastrtps_c.cpp  transition_description__type_support.c  transition_description__type_support.cpp  transition_event__functions.c  transition_event__rosidl_typesupport_fastrtps_c.cpp  transition_event__type_support.c  transition_event__type_support.cpp
interfaces/lifecycle_msgs/src/srv/: change_state__functions.c  change_state__rosidl_typesupport_fastrtps_c.cpp  change_state__type_support.c  change_state__type_support.cpp  get_available_states__functions.c  get_available_states__rosidl_typesupport_fastrtps_c.cpp  get_available_states__type_support.c  get_available_states__type_support.cpp  get_available_transitions__functions.c  get_available_transitions__rosidl_typesupport_fastrtps_c.cpp  get_available_transitions__type_support.c  get_available_transitions__type_support.cpp  get_state__functions.c  get_state__rosidl_typesupport_fastrtps_c.cpp  get_state__type_support.c  get_state__type_support.cpp
interfaces/nav_msgs/: BUILD.gn
interfaces/nav_msgs/src/msg/: grid_cells__functions.c  grid_cells__type_support.c  map_meta_data__functions.c  map_meta_data__type_support.c  occupancy_grid__functions.c  occupancy_grid__type_support.c  odometry__functions.c  odometry__type_support.c  path__functions.c  path__type_support.c
interfaces/nav_msgs/src/srv/: get_map__request__functions.c  get_map__request__type_support.c  get_map__response__functions.c  get_map__response__type_support.c  (+12 more)
interfaces/rcl_interfaces/: BUILD.gn
interfaces/rosgraph_msgs/: BUILD.gn
interfaces/sensor_msgs/: BUILD.gn
interfaces/service_msgs/: BUILD.gn
(+1134 files in other folders)
