# Copyright (c) 2024 ROS2 OpenHarmony Port Project
# GN templates for ROS2 libraries

# ============================================================================
# ROS2 shared library template
# ============================================================================
template("ros2_shared_library") {
  shared_library(target_name) {
    forward_variables_from(invoker,
                           "*",
                           [
                             "configs",
                             "testonly",
                           ])

    if (defined(invoker.configs)) {
      configs += invoker.configs
    }

    if (defined(invoker.testonly)) {
      testonly = invoker.testonly
    }
  }
}

# ============================================================================
# ROS2 static library template
# ============================================================================
template("ros2_static_library") {
  static_library(target_name) {
    forward_variables_from(invoker,
                           "*",
                           [
                             "configs",
                             "testonly",
                           ])

    if (defined(invoker.configs)) {
      configs += invoker.configs
    }

    if (defined(invoker.testonly)) {
      testonly = invoker.testonly
    }
  }
}

# ============================================================================
# ROS2 executable template
# ============================================================================
template("ros2_executable") {
  executable(target_name) {
    forward_variables_from(invoker,
                           "*",
                           [
                             "configs",
                             "testonly",
                           ])

    if (defined(invoker.configs)) {
      configs += invoker.configs
    }

    if (defined(invoker.testonly)) {
      testonly = invoker.testonly
    }
  }
}

# ============================================================================
# Config header generation template
# ============================================================================
template("generate_config_header") {
  action(target_name) {
    forward_variables_from(invoker,
                           [
                             "script",
                             "inputs",
                             "outputs",
                             "args",
                             "deps",
                           ])

    # Ensure we have a script
    if (!defined(script)) {
      script = "//build_config/scripts/generate_config.py"
    }
  }
}
